[project]
name = "odoo-addons-oca-l10n-mexico"
version = "17.0.20240813.0"
dependencies = [
    "odoo-addon-l10n_mx_catalogs>=17.0dev,<17.1dev",
    "odoo-addon-l10n_mx_res_partner_csf>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
